# vast-checker

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
sequoia/: extract.c  extract.hl.mlir  sequoia.sarif
source/: lib.cpp  main.cpp  sequoia_checker.cpp  sequoia_checker.hpp
test/: CMakeLists.txt
test/source/: vast-checker_test.cpp
